--- a/src/DesignEngine/H.LowCode.MyApp/Pages/AppIntegration.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/AppIntegration.razor
@@ -1,6 +1,6 @@
 ﻿@page "/myapp/{AppId}/integration"
 @namespace H.LowCode.MyApp
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout MyAppLayout
 
 <PageTitle>集成</PageTitle>
