--- a/src/DesignEngine/H.LowCode.MyApp/Pages/AppSettings.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/AppSettings.razor
@@ -1,6 +1,6 @@
 ﻿@page "/myapp/{AppId}/appsettings"
 @namespace H.LowCode.MyApp
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout MyAppLayout
 
 <PageTitle>应用设置</PageTitle>
