--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem.razor
@@ -1,10 +1,9 @@
 ﻿@page "/workbench/ecosystem"
 @namespace H.LowCode.Workbench
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout WorkbenchLayout
 
 @inject IHttpClientFactory HttpClientFactory
-@inject NavigationManager NavigationManager
 
 <PageTitle>生态中心 - H.LowCode</PageTitle>
 
