--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Index.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @page "/workbench"
 @namespace H.LowCode.Workbench
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 
 <PageTitle>工作台 - H.LowCode</PageTitle>
 
