--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Solutions.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Solutions.razor
@@ -1,6 +1,6 @@
 ﻿@page "/workbench/solutions"
 @namespace H.LowCode.Workbench
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout WorkbenchLayout
 
 <PageTitle>解决方案 - H.LowCode</PageTitle>
