--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/HomePage.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/HomePage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @page "/{AppId}/index"
 @namespace H.LowCode.ThemeParts.AntBlazor
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout AntBlazorThemeLayout
 
 <PageTitle>首页</PageTitle>
