--- a/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
@@ -1,10 +1,9 @@
 ﻿@page "/designer/{AppId}/{PageId}"
 @namespace H.LowCode.DesignEngine
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout DesignEngineLayout
 
 @inject IHttpClientFactory HttpClientFactory
-@inject NavigationManager NavigationManager
 @inject DragDropStateService DragDropStateService
 @inject IMessageService _message
 
@@ -82,7 +81,7 @@
         }
 
         var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
+        httpClient.BaseAddress = base.GetBaseUri();
 
         var pageSchema = await httpClient.GetFromJsonAsync<PageSchema>($"api/designengine/getpage?appId={AppId}&pageId={PageId}");
 
@@ -109,7 +108,7 @@
         var content = new StringContent(jsonSchema, Encoding.UTF8, "application/json");
 
         var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
+        httpClient.BaseAddress = base.GetBaseUri();
         var result = await httpClient.PostAsync($"api/designengine/savepage", content);
 
         if (result.StatusCode == HttpStatusCode.OK)
@@ -117,7 +116,7 @@
             if (_isNewPage)
             {
                 _isNewPage = false;
-                NavigationManager.NavigateTo($"/designer/{pageSchema.AppId}/{pageSchema.Id}");
+                base.NavigateTo($"/designer/{pageSchema.AppId}/{pageSchema.Id}");
             }
 
             await _message.Success("保存成功！");
