--- a/src/DesignEngine/H.LowCode.MyApp/Pages/AutoFlow.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/AutoFlow.razor
@@ -1,6 +1,6 @@
 ﻿@page "/myapp/{AppId}/autoflow"
 @namespace H.LowCode.MyApp
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout MyAppLayout
 
 <PageTitle>流程自动化</PageTitle>
