--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/ComponentPartsList.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/ComponentPartsList.razor
@@ -3,7 +3,6 @@
 @layout WorkbenchLayout
 
 @inject IHttpClientFactory HttpClientFactory
-@inject NavigationManager NavigationManager
 @inject IMessageService Message
 @inject ComponentStateWrapper<ComponentPartsList, IList<ComponentPartsListModel>> PageListState
 
@@ -80,7 +79,7 @@
     private async Task<IList<ComponentPartsListModel>> LoadComponentPartsAsync(int pageIndex, int pageSize)
     {
         var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
+        httpClient.BaseAddress = base.GetBaseUri();
 
         var result = await httpClient.GetFromJsonAsync<List<ComponentPartsListModel>>($"api/parts/getcomponents");
         return result;
@@ -89,7 +88,7 @@
     private async Task<ComponentPartsSchema> GetPageAsync(string partsId)
     {
         var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
+        httpClient.BaseAddress = base.GetBaseUri();
 
         var ComponentPartsSchema = await httpClient.GetFromJsonAsync<ComponentPartsSchema>($"api/parts/getcomponent?partsId={partsId}");
         return ComponentPartsSchema;
@@ -115,7 +114,7 @@
     private async Task DeleteAsync(string partsId)
     {
         var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
+        httpClient.BaseAddress = base.GetBaseUri();
 
         await httpClient.GetAsync($"api/parts/deletecomponent?partsId={partsId}");
         await Message.Success("删除成功！");
@@ -158,7 +157,7 @@
         var content = new StringContent(jsonSchema, Encoding.UTF8, "application/json");
 
         var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
+        httpClient.BaseAddress = base.GetBaseUri();
         var result = await httpClient.PostAsync($"api/parts/savecomponent", content);
 
         return result;
