--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
@@ -1,10 +1,9 @@
 ﻿@page "/{AppId}/{PageId}"
 @namespace H.LowCode.ThemeParts.AntBlazor
-@inherits LowCodeComponentBase
+@inherits LowCodePageComponentBase
 @layout AntBlazorThemeLayout
 
 @inject IHttpClientFactory HttpClientFactory
-@inject NavigationManager NavigationManager
 @inject ComponentStateWrapper<MetaPage, PageSchema> State
 
 <PageTitle>@($"{_pageCascadingModel.PageName}")</PageTitle>
@@ -54,7 +53,7 @@
     private async Task<PageSchema> LoadPageSchemaAsync()
     {
         var httpClient = HttpClientFactory.CreateClient();
-        httpClient.BaseAddress = new Uri(NavigationManager.BaseUri);
+        httpClient.BaseAddress = base.GetBaseUri();
 
         var pageSchema = await httpClient.GetFromJsonAsync<PageSchema>($"api/renderengine/getpage?appId={AppId}&pageId={PageId}");
         return pageSchema;
