DataSourceSchema id 改为 短id

--- a/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
@@ -73,7 +73,7 @@
         if (string.Equals("_empty", PageId))
         {
             _isNewPage = true;
-            var newPage = new PageSchema(true) { AppId = AppId, Name = "newpage" };
+            var newPage = new PageSchema() { AppId = AppId, Name = "newpage" };
             PageId = newPage.Id;
 
             DragDropStateService.SetPage(AppId, newPage);
