--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Apps/AppCreate.razor
@@ -82,7 +82,7 @@
 
         var httpClient = HttpClientFactory.CreateClient();
         httpClient.BaseAddress = base.GetBaseUri();
-        var result = await httpClient.PostAsync($"api/designengine/saveapp", content);
+        var result = await httpClient.PostAsync($"api/designer/saveapp", content);
 
         return result;
     }
