--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
@@ -55,7 +55,7 @@
         var httpClient = HttpClientFactory.CreateClient();
         httpClient.BaseAddress = base.GetBaseUri();
 
-        var pageSchema = await httpClient.GetFromJsonAsync<PageSchema>($"api/renderengine/getpage?appId={AppId}&pageId={PageId}");
+        var pageSchema = await httpClient.GetFromJsonAsync<PageSchema>($"api/meta/getpage?appId={AppId}&pageId={PageId}");
         return pageSchema;
     }
 
