--- a/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
@@ -9,7 +9,7 @@
 
 <PageTitle>@($"{_pageCascadingModel.PageName} - 页面设计器")</PageTitle>
 
-<link href="_content/H.LowCode.DesignEngine/designengine.css" rel="stylesheet" />
+<link href="@Assets["_content/H.LowCode.DesignEngine/designengine.css"]" rel="stylesheet" />
 
 <CascadingValue Value="@_pageCascadingModel" Name="pageCascading">
     <AntDesign.Layout Class="designpage" Style="padding:0 2px; background-color: #f7f7f7;">
