--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/ExtensionPropertyItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/ExtensionPropertyItem.razor
@@ -25,7 +25,8 @@
         }
         else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Checkbox)
         {
-            <Checkbox @bind-checked="@extPropertyKV.Value.BoolValue"></Checkbox>
+            //TODO
+            @* <Checkbox @bind-checked="@extPropertyKV.Value.BoolValue"></Checkbox> *@
         }
         else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Select)
         {
