--- a/src/DesignEngine/H.LowCode.MyApp/Layout/MyAppLayout.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Layout/MyAppLayout.razor
@@ -5,7 +5,7 @@
 @inject ComponentStateWrapper<MyAppLayout, MenuDataItem[]> MenuDataState
 @inject ComponentStateWrapper<AppSchema, AppSchema> AppSchemaState
 
-<link href="_content/H.LowCode.MyApp/myapp.css" rel="stylesheet" />
+<link href="@Assets["_content/H.LowCode.MyApp/myapp.css"]" rel="stylesheet" />
 
 @if (AppSchemaState.Value != null)
 {
