--- a/src/DesignEngine/H.LowCode.Workbench/Layout/WorkbenchLayout.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Layout/WorkbenchLayout.razor
@@ -1,7 +1,7 @@
 ﻿@namespace H.LowCode.Workbench
 @inherits LowCodeLayoutComponentBase
 
-<link href="_content/H.LowCode.Workbench/workbench.css" rel="stylesheet" />
+<link href="@Assets["_content/H.LowCode.Workbench/workbench.css"]" rel="stylesheet" />
 
 <style>
     .ant-pro-top-nav-header-menu {
