--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcLakexEditor.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcLakexEditor.razor
@@ -8,8 +8,8 @@
 * https://www.yuque.com/yuque/developer/gfoax065u2v72isu
 *@
 
-<link rel="stylesheet" type="text/css" href="_content/H.LowCode.ComponentParts.ExtensionComponents/LakexEditor-1.24.0/doc.css" />
-<link rel="stylesheet" type="text/css" href="_content/H.LowCode.ComponentParts.ExtensionComponents/antd-4.24.13/antd.css" />
+<link rel="stylesheet" type="text/css" href="@Assets["_content/H.LowCode.ComponentParts.ExtensionComponents/LakexEditor-1.24.0/doc.css"]" />
+<link rel="stylesheet" type="text/css" href="@Assets["_content/H.LowCode.ComponentParts.ExtensionComponents/antd-4.24.13/antd.css"]" />
 
 @* <div id="@_component.Id" class="ne-doc-major-editor" style="height: 100%"></div> *@
 
