--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
@@ -4,7 +4,7 @@
 @inject ComponentStateWrapper<AntBlazorThemeLayout, MenuDataItem[]> MenuDataState
 @inject ComponentStateWrapper<string, string> AppIdState
 
-<link href="_content/H.LowCode.ThemeParts.AntBlazor/renderengine.css" rel="stylesheet" />
+<link href="@Assets["_content/H.LowCode.ThemeParts.AntBlazor/renderengine.css"]" rel="stylesheet" />
 
 <style>
     .blazor-error-boundary {
