--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/SettingPanel/PropertySetting.razor
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/SettingPanel/PropertySetting.razor
@@ -165,7 +165,8 @@
                 }
                 else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Checkbox)
                 {
-                    <Checkbox @bind-checked="@extPropertyKV.Value.BoolValue"></Checkbox>
+                    //TODO
+                    @* <Checkbox @bind-checked="@extPropertyKV.Value.BoolValue"></Checkbox> *@
                 }
                 else if (extPropertyKV.Value.SettingItemType == PropertyItemTypeEnum.Select)
                 {
