--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcMonacoEditor.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcMonacoEditor.razor
@@ -3,7 +3,7 @@
 
 @inject IJSRuntime JSRuntime
 
-@* <link rel="stylesheet" type="text/css" href="_content/H.LowCode.ComponentParts.ExtensionComponents/MonacoEditor/editor/editor.main.css" /> *@
+@* <link rel="stylesheet" type="text/css" href="@Assets["_content/H.LowCode.ComponentParts.ExtensionComponents/MonacoEditor/editor/editor.main.css"]" /> *@
 
 <div id="monaco-container" style="width:100%; height:100%;"></div>
 
