--- a/src/RenderEngine/H.LowCode.RenderEngine.Host/Components/App.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Host/Components/App.razor
@@ -5,18 +5,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="icon" type="image/png" href="logo.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
+    <link rel="icon" type="image/png" href="@Assets["logo.png"]" />
+    <link rel="apple-touch-icon" sizes="512x512" href="@Assets["logo.png"]" />
     <!-- 所有项目的razor文件中的 css -->
-    <link rel="stylesheet" href="H.LowCode.RenderEngine.Host.styles.css" />
+    <link rel="stylesheet" href="@Assets["H.LowCode.RenderEngine.Host.styles.css"]" />
 
     <!-- Ant Design Pro Blazor (antblazor库会动态引入js,css资源,此处可无需引入.为避免在按需动态引入时样式渲染闪烁问题,此处提前引入) -->
-    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
-    <link href="_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css" rel="stylesheet" />
+    <link href="@Assets[" _content /AntDesign/css/ant-design-blazor.css"]" rel="stylesheet" />
+    <link href="@Assets["_content/AntDesign.ProLayout/css/ant-design-pro-layout-blazor.css"]" rel="stylesheet" />
 
-    <link href="manifest.json" rel="manifest" />
+    <link href="@Assets[" manifest.json"]" rel="manifest" />
 
     <HeadOutlet @rendermode="@InteractiveAuto" />
+    <ImportMap />
 </head>
 
 <body>
