- 项目全面切换为 abp (前期仅使用的 module, 后续将使用更多特性, 如动态api、RemoteService、API代理客户端等) - 尝试将 razor 页面中的 api 请求切换为 接口调用(根据当前渲染模式, Server 模式基于 ioc 调用, webassembly 模式基于 api 代理实现 http 调用)

--- a/src/DesignEngine/H.LowCode.Workbench/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/_Imports.razor
@@ -13,6 +13,7 @@
 @using H.Extensions.System
 @using H.LowCode.ComponentBase
 @using H.LowCode.Configuration
+@using H.LowCode.DesignEngine.Application.Contracts
 @using H.LowCode.Workbench
 @using H.LowCode.MetaSchema
 @using H.LowCode.PartsMetaSchema
