在 Blazor WebAssembly 中使用 Dynamic API Proxy 存在问题，暂时使用 IHttpClientFactory 方式

--- a/src/DesignEngine/H.LowCode.Workbench/Pages/MyApps.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/MyApps.razor
@@ -4,6 +4,7 @@
 @inherits LowCodePageComponentBase
 @layout WorkbenchLayout
 
+@inject IHttpClientFactory HttpClientFactory
 @inject IConfiguration Configuration
 @inject IAppApplicationService _appApplicationService
 @inject ComponentStateWrapper<MyApps, IList<AppListModel>> MyAppsState
@@ -90,10 +91,16 @@
 
     private async Task<IList<AppListModel>> LoadAppsAsync()
     {
-        var url = @Configuration["RemoteServices:DesignEngine:BaseUrl"];
-        Console.WriteLine($"RemoteServices: {url}");
+        //TODO: 基于动态API代理存在问题
+        // var url = @Configuration["RemoteServices:DesignEngine:BaseUrl"];
+        // Console.WriteLine($"RemoteServices: {url}");
+        //return await _appApplicationService.GetAppsAsync();
 
-        return await _appApplicationService.GetAppsAsync();
+        var httpClient = HttpClientFactory.CreateClient();
+        httpClient.BaseAddress = base.GetBaseUri();
+
+        var result = await httpClient.GetFromJsonAsync<IList<AppListModel>>($"api/designer/getapps");
+        return result;
     }
 
     private async void ReloadApps()
